# rna-features

./: .gitignore  LICENSE  README.md  pipeline_diagram.drawio  setup.cfg
docs/: pipeline_diagram.drawio
rnafeatures/: argparser.py  logging.conf  main.py
rnafeatures/expression/: breadth.py  logfc_breadth.py  logfc_matrix.py  logfc_mmm.py  mad_max_med.py  main.py  tpm_mmm.py
rnafeatures/tests/: test_argparser.py
rnafeatures/utils/: argparser.py
tests/: test_argparser.py
