[metadata]
name = rna-features
version = 0.0.1
author = Vikesh Ajith
author_email = vikesh.ajith@gmail.com
description = A package that generates ML features from RNAseq data
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    pandas >=1.3.0
    numpy >=1.21.0
    pytest >=6.2.5